# ChangeLog for app-arch/rpm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.102 2009/08/21 13:18:32 ulm Exp $

  21 Aug 2009; Ulrich Mueller <ulm@gentoo.org> rpm-5.0.0.ebuild,
  rpm-5.0.3.ebuild, rpm-5.1.6.ebuild, metadata.xml:
  Rename "file" USE flag to "magic", bug 282199.

*rpm-5.1.6 (27 Dec 2008)

  27 Dec 2008; Caleb Tennis <caleb@gentoo.org> +rpm-5.1.6.ebuild:
  version bump, from 223481

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/rpm-4.4.7-config.rpath.patch:
  Fix patch to apply.

  25 Sep 2008; Alexis Ballier <aballier@gentoo.org> rpm-5.0.3.ebuild:
  keyword ~x86-fbsd

  10 Sep 2008; Jeroen Roovers <jer@gentoo.org> rpm-4.4.6-r6.ebuild:
  Stable for HPPA (bug #236158).

  07 Sep 2008; Raúl Porcel <armin76@gentoo.org> rpm-4.4.6-r6.ebuild:
  alpha/ia64 stable wrt #236158

  07 Sep 2008; Markus Meier <maekke@gentoo.org> rpm-4.4.6-r6.ebuild:
  amd64/x86 stable, bug #236158

  06 Sep 2008; Friedrich Oslage <bluebird@gentoo.org> rpm-4.4.6-r6.ebuild:
  Stable on sparc, bug #236158

  04 Sep 2008; Brent Baude <ranger@gentoo.org> rpm-4.4.6-r6.ebuild:
  Marking rpm-4.4.6-r6 ppc for bug 236158

  04 Sep 2008; Brent Baude <ranger@gentoo.org> rpm-4.4.6-r6.ebuild:
  stable ppc64, bug 236158

  23 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*rpm-4.4.6-r6 (31 May 2008)

  31 May 2008; Peter Alfredsen <loki_val@gentoo.org> +rpm-4.4.6-r6.ebuild:
  Version bump for >=sys-libs/db-4 wrt bug 218489

*rpm-4.4.7-r4 (20 May 2008)
*rpm-4.4.6-r5 (20 May 2008)

  20 May 2008; Vlastimil Babka <caster@gentoo.org>
  +files/rpm-4.4.6-neon-0.28.patch, +rpm-4.4.6-r5.ebuild,
  +rpm-4.4.7-r4.ebuild:
  Revbumps to update to neon 0.28 API, patch by Honza Machacek
  <Hloupy.Honza@centrum.cz>, fixes bug #214799. Dropped ~ppc and ~mips which
  don't have neon 0.28 keyworded. 4.4.6-r5 is based on -r4. 4.4.7-r4 on -r2