@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/rpm-5.1.6.ebuild,v 1.2 2009/08/21 13:18:32 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/rpm-5.1.6.ebuild,v 1.3 2009/09/05 13:26:49 tove Exp $
 
 inherit multilib distutils python
 
@@ -83,7 +83,7 @@ src_compile() {
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed"
+	emake DESTDIR="${D}" INSTALLDIRS=vendor install || die "emake install failed"
 	dodoc CHANGES CREDITS NEWS README TODO
 }
 
